# CSC340-Group-Project

./: CMakeLists.txt  GameData.cpp  GameData.h  Item.cpp  LinkedList.cpp  LinkedList.h  Location.cpp  Node.cpp  Node.h  Player.cpp  Player.h  README.md  location.cpp  location.h  main.cpp
Database/: GameData.cpp  GameData.h  LinkedList.h  Node.h
Location/: Location.cpp  Location.h
items/: Armor.cpp  Armor.h  Item.h  Weapon.cpp  Weapon.h
textFiles/: items.txt
